Use g++-8 to compile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.8)
 project(3DReconstruction)
 
-#set(CMAKE_CXX_COMPILER /usr/local/bin/g++-7)
-#set(CMAKE_C_COMPILER /usr/local/bin/gcc-7)
+set(CMAKE_CXX_COMPILER /usr/local/bin/g++-8)
+set(CMAKE_C_COMPILER /usr/local/bin/gcc-8)
 
 set(CMAKE_CXX_STANDARD 11)
 
 find_package(OpenCV REQUIRED)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework OpenGL -lGLEW -lglfw -O2 -march=native")
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -framework OpenGL -lGLEW -lglfw -O3 -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 include_directories(
         Dependencies
